# asteroid-voice

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  audioiodevice.cpp  audioiodevice.h  audiorecorder.cpp  audiorecorder.h  main.cpp  main.qml
